name:                {{name}}
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              TODO
maintainer:          TODO
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     {{name}}
  build-depends:       base >=4.9 && <4.10, zepto >=0.9 && <0.10
  default-language:    Haskell2010
